css correction, when menu was closed the content overflowed on the left side of the page

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -10,6 +10,6 @@ table.striped-table tr:nth-child(even) {
   max-width: 100%;
 }
 
-.bd-sidebar-primary {
+/* .bd-sidebar-primary {
   flex-basis: 12.5%;
-}
+} */
